added the questions here